Implementación de chFile y lista de chFile para separar datos que vienen de cada canal

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .vscode/settings.json
 ArraySimulator/__pycache__/RectArray.cpython-36.pyc
 ArraySimulator/CircArray.py
+SoftwarePS/proyectoRedes/server_main
+SoftwarePS/proyectoRedes/server_main
