--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ ArraySimulator/__pycache__/RectArray.cpython-36.pyc
 ArraySimulator/CircArray.py
 SoftwarePS/proyectoRedes/server_main
 SoftwarePS/proyectoRedes/client_main
+SoftwarePS/test.c
+SoftwarePS/test
+VHDL/adc_control_saxi_bak.vhd
