--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ SoftwarePS/proyectoRedes/client_main
 SoftwarePS/test.c
 SoftwarePS/test
 VHDL/adc_control_saxi_bak.vhd
+SoftwarePS/server/captured_data
+SoftwarePS/server/fileReader
+SoftwarePS/server/server_main
