Adaptacion de funciones de server a 16 canales.

--- a/SoftwarePS/server/makefile
+++ b/SoftwarePS/server/makefile
@@ -1,3 +1,12 @@
+# Emulation, acquisition and data processing system for sensor matrices
+# José Quinteros del Castillo
+# Instituto Balseiro
+# ---
+# Makefile for server functions
+
+# Version: 2020-10-24
+# Comments:
+
 # Usage:
 # make        # compile all binary
 # make clean  # remove ALL binaries and objects
@@ -6,23 +15,21 @@ CC = gcc                        # compiler to use
 
 LINKERFLAG = -lm -lrt -pthread
 
-SERVER_SRCS := $(wildcard *.c) 
+SERVER_SRCS := $(wildcard src/*.c) 
 SERVER_SRCS := $(filter-out fileReader.c, $(SERVER_SRCS))
-SERVER_HEADERS := $(wildcard *.h) 
+SERVER_HEADERS := $(wildcard src/*.h) 
 LIB_SRCS := $(wildcard ../SistAdq_project/lib/*.c)
 LIB_HEADERS := $(wildcard ../SistAdq_project/lib/*.h)
-SRC_SRCS := $(wildcard ../SistAdq_project/src/*.c)
-SRC_HEADERS := $(wildcard ../SistAdq_project/src/*.h)
 
 .PHONY: all clean
 
 all: server_main fileReader
 
-server_main: $(SERVER_SRCS) $(SERVER_HEADERS) $(LIB_SRCS) $(LIB_HEADERS)
-	gcc -g -Wall $(SERVER_SRCS) $(LIB_SRCS) -o $@ $(LINKERFLAG)
+server_main: server_main.c $(SERVER_SRCS) $(SERVER_HEADERS) $(LIB_SRCS) $(LIB_HEADERS)
+	gcc -g -Wall server_main.c $(SERVER_SRCS) $(LIB_SRCS) -o $@ $(LINKERFLAG)
 
-fileReader: fileReader.c $(SRC_SRCS) $(SRC_HEADERS) $(LIB_SRCS) $(LIB_HEADERS)
-	gcc -g -Wall fileReader.c $(SRC_SRCS) $(LIB_SRCS) -o $@ $(LINKERFLAG)
+fileReader: fileReader.c $(LIB_SRCS) $(LIB_HEADERS)
+	gcc -g -Wall fileReader.c $(LIB_SRCS) -o $@ $(LINKERFLAG)
 
 clean:
-	rm -rvf server_main
+	rm -rvf server_main fileReader
