Moved client files

--- a/SoftwarePS/.gitignore
+++ b/SoftwarePS/.gitignore
@@ -1,8 +1,6 @@
-/SistAdq_project/Debug/
-/SistAdq_project/.cproject
-/SistAdq_project/.project
-/SistAdq_project/main
-/SistAdq_project/main.c
+/SistAdq_project/
 /.vscode/
 /server/captures/
 /unused/
+/client/test
+/client/test.c
